add scopt dependency, clean build.sbt